# sdsc-2023-workshop

./: .flake8  .gitignore  README.md  docker-compose.yml  mdbook.Dockerfile  pyproject.toml  requirements.txt  workbook.Dockerfile
notebooks/: 0_getting_started_with_dfi.ipynb  1_identifying_bsc_customers.ipynb  2_mobility_analysis.ipynb  3_spatiotemporal_analysis.ipynb
presentation/: README.md  book.toml
presentation/src/: SUMMARY.md  end.md  feedback.md  introductions.md  python_setup.md  welcome.md
presentation/src/analysis/: README.md  data_pipeline.md  datasets.md  dynamic_spatiotemporal_analysis.md  identifying_bsc_customers.md  mobility_data_analysis.md
presentation/src/appendix/: appendix_a.md  appendix_b.md
presentation/src/assets/: osm_map.json
presentation/src/assets/figures/: bsc_map.html  cross_visitation.html  cross_visitation_map.html  time_period_heatmap.html  workshop_location_map.html
presentation/src/dfi/: README.md  api_key.md  dfi_queries.md
presentation/src/indexes/: README.md  geospatial.md  multiattributes.md  timeseries.md  tradeoffs.md
presentation/theme/: head.hbs  index.hbs
presentation/theme/css/: general.css  variable.css
presentation/theme/fonts/: fonts.css
scripts/: create_bsc_map.py  cross_visitation_map.py
